SERVER-51303 Fix lookup match absorbtion optimization for $type